# pyciemss-service

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  api.env.sample  docker-bake.hcl  docker-compose.yaml  env.sample  flake.nix  pyproject.toml
.github/workflows/: correctness.yaml  formatting.yaml  lint.yaml  publish.yaml
SciMLIntegration.jl/: Manifest.toml  Project.toml
SciMLIntegration.jl/src/: SciMLIntegration.jl
api/: Dockerfile  Dockerfile.production  models.py  pika_service.py  server.py  utils.py
api/routers/: models.py  simulate.py
api/validation/: models.py
docker/: Dockerfile  Dockerfile.api  Dockerfile.simulations-worker  Dockerfile.worker  docker-bake.hcl  docker-compose.yaml
docker/optimize-simulate/output/: tds_simulation.json
operations/: Dockerfile  operations.py
rabbit/: pika_service.py
service/: api.py  execute.py  models.py  operations.py  pika_service.py  server.py  settings.py  utils.py
service/models/: __init__.py  base.py  converters.py  response.py
service/models/operations/: __init__.py  calibrate.py  ensemble_calibrate.py  ensemble_simulate.py  optimize.py  simulate.py
service/operations/: ciemss.py  sciml.py
service/utils/: convert.py  rabbitmq.py  rq_helpers.py  tds.py
simulations/: Dockerfile  ciemss_processor.py  utils.py
tests/: conftest.py  operators.py  test_conversions.py  tests.py
tests/examples/calibrate/input/: 0da53e71-52c4-49fd-b957-2219af712fdd.json  0da53e71-52c4-49fd-b957-2219af712fdd_config.json  request.json  test.csv
tests/examples/calibrate/output/: eval.csv  tds_simulation.json  visualization.json
tests/examples/ensemble-calibrate/input/: 398d2a33-1cbe-44cf-9b66-a6976b947809.json  ensemble.csv  fab58d86-cf1e-4990-809a-58c029545a3a.json  left.json  request.json  right.json
tests/examples/ensemble-calibrate/output/: eval.csv  result.csv  tds_simulation.json  visualization.json
tests/examples/ensemble-simulate-temp-quick-fix/input/: request.json
tests/examples/ensemble-simulate-temp-quick-fix/output/: eval.csv  result.csv  tds_simulation.json  visualization.json
tests/examples/ensemble-simulate/input/: 398d2a33-1cbe-44cf-9b66-a6976b947809.json  fab58d86-cf1e-4990-809a-58c029545a3a.json  other-model.json  request.json  sidarthe.json
tests/examples/ensemble-simulate/output/: tds_simulation.json
tests/examples/optimize-calibrate/input/: request.json  train_data.csv
tests/examples/optimize-calibrate/output/: eval.csv  parameters.dill  result.csv  tds_simulation.json  visualization.json
tests/examples/optimize-simulate/input/: 0da53e71-52c4-49fd-b957-2219af712fdd.json  request.json
tests/examples/optimize-simulate/output/: eval.csv  result.csv  tds_simulation.json  visualization.json
tests/examples/optimize/input/: request.json
tests/examples/optimize/output/: eval.csv  tds_simulation.json
tests/examples/simulate-with-parameters/input/: parameters.dill  request.json  sidarthe.json
tests/examples/simulate-with-parameters/output/: tds_simulation.json
tests/examples/simulate/input/: 0da53e71-52c4-49fd-b957-2219af712fdd.json  intervention.json  request.json  sidarthe.json  sidarthe_config.json
tests/examples/simulate/output/: tds_simulation.json  visualization.json
tests/integration/: broken_ensemble_simulate.py  conftest.py  depr_ensemble_calibrate.py  simulate.py  test_calibrate.py  test_ensemble_calibrate.py  test_ensemble_simulate.py  test_optimize.py  test_optimize_calibrate.py  test_optimize_simulate.py  test_simulate.py
workers/: Dockerfile  operations.py  utils.py
workers/hooks/: post_checkout
