[tool.poetry]
name = "pyciemss-service"
version = "1.7.0"
description = "PyCIEMSS simulation service to run CIEMSS simulations"
authors = ["Powell Fendley", "Five Grant"]
readme = "README.md"
packages = [{include = "service"}, {include = "tests"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
fastapi = "^0.96.0"
rq = "^1.15.0"
redis = "^4.5.5"
boto3 = "^1.26.147"
uvicorn = "^0.22.0"
pika = "1.3.2"
pandas = "^2.0.0"
filelock = "^3.12.2"
juliacall = { version="^0.9.14", optional = true }
torch = { version = "^2.0.1", optional = true }
numpy = { version = "^1.24.0", optional = true }

[tool.poetry.extras]
worker = ["torch", "numpy", "juliacall"]

[tool.poetry.scripts]
mockrabbitmq = "service.utils.rabbitmq:mock_rabbitmq_consumer"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.282"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
requests-mock = "^1.11.0"
mock = "^5.1.0"

[tool.pytest.ini_options]
python_files = ["tests/tests.py"]
markers = ["operation"]
pythonpath = "service"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
