[tool.poetry]
name = "pyciemss-service"
version = "1.7.0"
description = "PyCIEMSS simulation service to run CIEMSS simulations"
authors = ["Powell Fendley", "Five Grant"]
readme = "README.md"
packages = [{include = "service"}, {include = "tests"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
fastapi = "^0.96.0"
rq = "^1.15.0"
redis = "^4.5.5"
boto3 = "^1.26.147"
uvicorn = "^0.22.0"
pika = "1.3.2"
pandas = "^2.0.0"
filelock = "^3.12.2"
poethepoet = "^0.21.1"
# juliacall = { version="^0.9.14", optional = true }
dill = "^0.3.7"

[tool.poetry.scripts]
mockrabbitmq = "service.utils.rabbitmq:mock_rabbitmq_consumer"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.282"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
requests-mock = "^1.11.0"
mock = "^5.1.0"
fakeredis = "^2.17.0"
httpx = "^0.24.1"

[tool.poe.tasks]
install-pyciemss = "pip install --no-cache git+https://github.com/ciemss/pyciemss.git@staging/refactor" 

[tool.pytest.ini_options]
markers = ["example_dir"]
pythonpath = "service"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
