[tool.poetry]
name = "pyciemss-service"
version = "2.1.0"
description = "PyCIEMSS simulation service to run CIEMSS simulations"
authors = ["Powell Fendley", "Five Grant"]
readme = "README.md"
packages = [{include = "service"}, {include = "tests"}]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
fastapi = "0.96.0"
rq = "^1.15.0"
redis = "^4.5.5"
boto3 = "^1.26.147"
uvicorn = "^0.22.0"
pika = "1.3.2"
pandas = "^2.0.0"
filelock = "^3.12.2"
poethepoet = "^0.21.1"
# juliacall = { version="^0.9.14", optional = true }
dill = "^0.3.7"
numpy = "^1.26.4"


[tool.poetry.scripts]
mockrabbitmq = "service.utils.rabbitmq:mock_rabbitmq_consumer"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.282"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
requests-mock = "^1.11.0"
mock = "^5.1.0"
fakeredis = "^2.17.0"
httpx = "0.24.1"


[tool.poe.tasks]
install-pyciemss = "pip install --no-cache-dir git+https://github.com/ciemss/pyciemss.git@08cf9fc354e1de858cf0854aa5ca1bd31c56b2c6 --use-pep517"


[tool.pytest.ini_options]
markers = ["example_dir"]
pythonpath = "service"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
